@@ -1,5 +1,11 @@
 == 0.9.0
 
+* Enhancements
+  * Using Rails 3.1.1, Ruby 1.9.3.p0, and Contour 0.5.6
+
+* Testing
+  * Analyzing test coverage using SimpleCov gem, test coverage now at 70%
+
 == 0.8.0
 
 * Enhancements
